refactor: 모놀리식 기준으로 통합 완료